--- a/BlindBoxShop.Application/Pages/Cart/Cart.razor
+++ b/BlindBoxShop.Application/Pages/Cart/Cart.razor
@@ -8,7 +8,7 @@
     <div class="bg-gradient-to-r from-cyan-600 to-cyan-800 rounded-lg p-6 mb-8 shadow-md">
         <div class="flex items-center">
             <MudIcon Icon="@Icons.Material.Filled.ShoppingCart" Color="Color.Default" Class="mr-4 text-white" />
-            <h1 class="text-2xl font-bold text-white">Giỏ Hàng (@(_cartItems.Count) sản phẩm)</h1>
+            <h1 class="text-2xl font-bold text-white">Giỏ Hàng (@_uniqueItemCount sản phẩm)</h1>
         </div>
     </div>
 
